app-test/testdata/typesystem/neg/pattern-matching-alternative-expression-type/check/patmat.check
testdata/typesystem/neg/pattern-matching-alternative-expression-type/src/patmat.cal:6:17: error: Incompatible types; expected int but was <top>.
                case a of
                ^^^^^^^^^
                    1 : true end // error
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
                    _ : 0 end
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
                end;
^^^^^^^^^^^^^^^^^^^